# Livraria-intro-Django

./: .gitignore  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_autor.py  0003_auto_20211007_0323.py  0004_rename_autores_autor.py  0005_auto_20211007_1213.py  0006_livro_autores.py  0007_compra.py  0008_itenscompra.py  0009_auto_20211217_1825.py
core/views/: __init__.py  categoria.py  categoriaApiView.py  categoriaClass.py  categoriaGeneric.py  compra.py  editora.py  livro.py  testesIniciais.py
livraria_1/: asgi.py  settings.py  urls.py  wsgi.py
static/: staticfiles.json
