[tool.poetry]
name = "livraria_1"
version = "0.1.0"
description = ""
authors = ["Antonio"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
