[tool.poetry]
name = "livraria_1"
version = "0.1.0"
description = ""
authors = ["Antonio"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
djangorestframework = "^3.12.4"
flake8 = "^4.0.1"
djangorestframework-simplejwt = "^5.0.0"
drf-spectacular = "^0.21.1"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
